@@ -1,3 +1,9 @@
+2024-03-31 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/z80/ralloc2.cc,
+	  src/z80/gen.c:
+	  Improve code generation for z80 comparisons.
+
 2024-03-29 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/z80/gen.c,
